// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exportSceneToR3fModule > emits a readable module for a basic scene 1`] = `
"/* eslint-disable */
/* Auto-generated by Diorama R3F bridge. Review TODOs before shipping. */
import type { ReactNode } from 'react';
import type { ThreeElements } from '@react-three/fiber';

type SemanticNodeProps = Omit<ThreeElements['group'], 'children'> & {
  sourceId: string;
  semanticRole: string;
  renderMesh?: boolean;
  children?: ReactNode;
  onSelect?: () => void;
  onHoverStart?: () => void;
  onHoverEnd?: () => void;
};

function SemanticNode(props: SemanticNodeProps) {
  const { sourceId, semanticRole, renderMesh, children, onSelect, onHoverStart, onHoverEnd, ...groupProps } = props;
  return (
    <group
      {...groupProps}
      userData={{ sourceId, semanticRole }}
      onPointerOver={onHoverStart}
      onPointerOut={onHoverEnd}
      onClick={onSelect}
    >
      {renderMesh ? (
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      ) : null}
      {children}
    </group>
  );
}

type SemanticComponentProps = Omit<SemanticNodeProps, 'semanticRole'>;

function SceneMesh(props: SemanticComponentProps) {
  return <SemanticNode {...props} semanticRole="unknown" />;
}

export function DioramaScene() {
  return (
    <>
      {/* default-root - Root */}
      <group name="Root" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        {/* default-cube-1 - Cube 1 */}
        <SceneMesh
          sourceId="default-cube-1"
          name="Cube 1"
          position={[0, 0.5, 0]}
          rotation={[0, 0, 0]}
          scale={[1, 1, 1]}
          renderMesh
        />
      </group>
    </>
  );
}
"
`;

exports[`exportSceneToR3fModule > emits material token comments for living space without material runtime 1`] = `
"/* eslint-disable */
/* Auto-generated by Diorama R3F bridge. Review TODOs before shipping. */
import type { ReactNode } from 'react';
import type { ThreeElements } from '@react-three/fiber';

type SemanticNodeProps = Omit<ThreeElements['group'], 'children'> & {
  sourceId: string;
  semanticRole: string;
  renderMesh?: boolean;
  children?: ReactNode;
  onSelect?: () => void;
  onHoverStart?: () => void;
  onHoverEnd?: () => void;
};

function SemanticNode(props: SemanticNodeProps) {
  const { sourceId, semanticRole, renderMesh, children, onSelect, onHoverStart, onHoverEnd, ...groupProps } = props;
  return (
    <group
      {...groupProps}
      userData={{ sourceId, semanticRole }}
      onPointerOver={onHoverStart}
      onPointerOut={onHoverEnd}
      onClick={onSelect}
    >
      {renderMesh ? (
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      ) : null}
      {children}
    </group>
  );
}

type SemanticComponentProps = Omit<SemanticNodeProps, 'semanticRole'>;

function SceneGroup(props: SemanticComponentProps) {
  return <SemanticNode {...props} semanticRole="unknown" />;
}

function SceneMesh(props: SemanticComponentProps) {
  return <SemanticNode {...props} semanticRole="unknown" />;
}

export function DioramaScene() {
  return (
    <>
      {/* living-root - Living space */}
      <group name="Living space" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        {/* living-room - Room */}
        <SceneGroup
          sourceId="living-room"
          name="Room"
          position={[0, 0, 0]}
          rotation={[0, 0, 0]}
          scale={[1, 1, 1]}
        >
          {/* living-floor - Floor | material=mat.floor */}
          <SceneMesh
            sourceId="living-floor"
            name="Floor"
            position={[0, 0.04, 0]}
            rotation={[0, 0, 0]}
            scale={[6, 0.08, 4.5]}
            renderMesh
          />
          {/* living-furniture-group - Furniture */}
          <SceneGroup
            sourceId="living-furniture-group"
            name="Furniture"
            position={[0, 0, 0]}
            rotation={[0, 0, 0]}
            scale={[1, 1, 1]}
          >
            {/* living-sofa - Sofa | material=mat.fabric */}
            <SceneMesh
              sourceId="living-sofa"
              name="Sofa"
              position={[-1.2, 0.45, 0.5]}
              rotation={[0, 0.25, 0]}
              scale={[1.8, 0.55, 0.85]}
              renderMesh
            />
            {/* living-table - Coffee table | material=mat.wood */}
            <SceneMesh
              sourceId="living-table"
              name="Coffee table"
              position={[0.6, 0.32, 0.4]}
              rotation={[0, 0, 0]}
              scale={[1.1, 0.12, 0.65]}
              renderMesh
            />
            {/* living-lamp - Floor lamp | material=mat.metal */}
            <SceneMesh
              sourceId="living-lamp"
              name="Floor lamp"
              position={[1.9, 0.95, -0.6]}
              rotation={[0, 0, 0]}
              scale={[0.2, 1.9, 0.2]}
              renderMesh
            />
          </SceneGroup>
        </SceneGroup>
      </group>
    </>
  );
}
"
`;

exports[`exportSceneToR3fModule > emits semantic components and handler scaffolds for an interactive showroom 1`] = `
"/* eslint-disable */
/* Auto-generated by Diorama R3F bridge. Review TODOs before shipping. */
import { useState } from 'react';
import type { ReactNode } from 'react';
import type { ThreeElements } from '@react-three/fiber';

type SemanticNodeProps = Omit<ThreeElements['group'], 'children'> & {
  sourceId: string;
  semanticRole: string;
  renderMesh?: boolean;
  children?: ReactNode;
  onSelect?: () => void;
  onHoverStart?: () => void;
  onHoverEnd?: () => void;
};

function SemanticNode(props: SemanticNodeProps) {
  const { sourceId, semanticRole, renderMesh, children, onSelect, onHoverStart, onHoverEnd, ...groupProps } = props;
  return (
    <group
      {...groupProps}
      userData={{ sourceId, semanticRole }}
      onPointerOver={onHoverStart}
      onPointerOut={onHoverEnd}
      onClick={onSelect}
    >
      {renderMesh ? (
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      ) : null}
      {children}
    </group>
  );
}

type SemanticComponentProps = Omit<SemanticNodeProps, 'semanticRole'>;

function DisplaySurface(props: SemanticComponentProps) {
  return <SemanticNode {...props} semanticRole="display" />;
}

function EnvironmentGroup(props: SemanticComponentProps) {
  return <SemanticNode {...props} semanticRole="environment" />;
}

function Product(props: SemanticComponentProps) {
  return <SemanticNode {...props} semanticRole="product" />;
}

function SceneLight(props: ThreeElements['group'] & { sourceId: string; lightKind: 'ambient' | 'directional'; lightIntensity?: number; lightCastShadow?: boolean; children?: ReactNode }) {
  const { sourceId, lightKind, lightIntensity, lightCastShadow, children, ...groupProps } = props;
  return (
    <group {...groupProps} userData={{ sourceId, semanticRole: 'light' }}>
      {lightKind === 'ambient' ? (
        <ambientLight intensity={lightIntensity} />
      ) : (
        <directionalLight intensity={lightIntensity} castShadow={lightCastShadow} />
      )}
      {children}
    </group>
  );
}

function SeatingElement(props: SemanticComponentProps) {
  return <SemanticNode {...props} semanticRole="seating" />;
}

export function DioramaScene() {
  const [selectedId, setSelectedId] = useState<string | null>(null);

  const handleSelect = (id: string) => {
    setSelectedId(id);
  };

  const handleHoverStart = (id: string) => {
    // TODO: highlight object with this source id.
    void id;
  };

  const handleHoverEnd = (id: string) => {
    // TODO: clear highlight for this source id.
    void id;
  };

  const handleFocusCamera = (id: string) => {
    // TODO: move or retarget the app camera for this source id.
    void id;
  };

  return (
    <>
      {/* Studio fill - not from scene graph */}
      <ambientLight intensity={0.4} />
      <directionalLight castShadow position={[5, 8, 5]} intensity={1.1} />
      {/* Semantic group: display_area | role=display | nodes=product_01,product_02,product_03,display_table,display_plinth */}
      {/* Semantic group: environment | role=environment | nodes=floor,wall,backdrop_panel */}
      {/* Semantic group: lighting_zone | role=lighting | nodes=light_key,light_fill */}
      {/* Semantic group: seating_area | role=seating | nodes=bench,chair */}
      {/* showroom-root - Messy Product Showroom */}
      <group name="Messy Product Showroom" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        {/* floor - Floor | role=environment | group=environment */}
        <EnvironmentGroup
          sourceId="floor"
          name="Floor"
          position={[0, -0.05, 0]}
          rotation={[0, 0, 0]}
          scale={[8, 0.1, 6]}
          renderMesh
        />
        {/* wall - North Wall | role=environment | group=environment */}
        <EnvironmentGroup
          sourceId="wall"
          name="North Wall"
          position={[0, 1.6, -3]}
          rotation={[0, 0, 0]}
          scale={[8, 3.2, 0.12]}
          renderMesh
        />
        {/* product_01 - Product 01 | role=product | group=display_area | traits=clickable,hoverable,displayable,focusable | behavior=click_select,hover_highlight,show_info,focus_camera */}
        <Product
          sourceId="product_01"
          name="Product 01"
          position={[-1.8, 0.65, 0.4]}
          rotation={[0, 0.4, 0]}
          scale={[0.65, 0.9, 0.65]}
          renderMesh
          onHoverStart={() => handleHoverStart('product_01')}
          onHoverEnd={() => handleHoverEnd('product_01')}
          onSelect={() => {
            handleSelect('product_01');
            handleFocusCamera('product_01');
          }}
        />
        {selectedId === 'product_01' ? (
          <>{/* TODO: render info panel for Product information: Interactive showroom item generated from structured scene metadata.. */}</>
        ) : null}
        {/* bench - Bench | role=seating | group=seating_area | traits=seatable,focusable | behavior=focus_camera,anchor_point */}
        {/* TODO: anchor_point is scaffolded as a developer hook; no runtime behavior is generated. */}
        <SeatingElement
          sourceId="bench"
          name="Bench"
          position={[-2.6, 0.32, 1.9]}
          rotation={[0, 0.18, 0]}
          scale={[1.5, 0.45, 0.55]}
          renderMesh
          onSelect={() => handleFocusCamera('bench')}
        />
        {/* display_table - Display Table | role=display | group=display_area | traits=displayable | behavior=show_info */}
        <DisplaySurface
          sourceId="display_table"
          name="Display Table"
          position={[-0.4, 0.28, 0.15]}
          rotation={[0, -0.12, 0]}
          scale={[1.8, 0.35, 0.9]}
          renderMesh
        />
        {selectedId === 'display_table' ? (
          <>{/* TODO: render info panel for Display Table. */}</>
        ) : null}
        {/* product_03 - Product 03 | role=product | group=display_area | traits=clickable,hoverable,displayable,focusable | behavior=click_select,hover_highlight,show_info,focus_camera */}
        <Product
          sourceId="product_03"
          name="Product 03"
          position={[0.35, 0.8, 1.45]}
          rotation={[0, 0.85, 0]}
          scale={[0.55, 1.1, 0.55]}
          renderMesh
          onHoverStart={() => handleHoverStart('product_03')}
          onHoverEnd={() => handleHoverEnd('product_03')}
          onSelect={() => {
            handleSelect('product_03');
            handleFocusCamera('product_03');
          }}
        />
        {selectedId === 'product_03' ? (
          <>{/* TODO: render info panel for Product information: Interactive showroom item generated from structured scene metadata.. */}</>
        ) : null}
        {/* light_fill - Light Fill | role=lighting | group=lighting_zone */}
        <SceneLight
          sourceId="light_fill"
          name="Light Fill"
          position={[3.1, 2.4, 2.5]}
          rotation={[0, -0.4, 0]}
          scale={[0.25, 0.25, 0.25]}
          lightKind="ambient"
          lightIntensity={0.35}
        />
        {/* chair - Chair | role=seating | group=seating_area | traits=seatable,focusable | behavior=focus_camera,anchor_point */}
        {/* TODO: anchor_point is scaffolded as a developer hook; no runtime behavior is generated. */}
        <SeatingElement
          sourceId="chair"
          name="Chair"
          position={[2.7, 0.45, 1.65]}
          rotation={[0, -0.55, 0]}
          scale={[0.75, 0.9, 0.75]}
          renderMesh
          onSelect={() => handleFocusCamera('chair')}
        />
        {/* display_plinth - Display Plinth | role=display | group=display_area | traits=displayable | behavior=show_info */}
        <DisplaySurface
          sourceId="display_plinth"
          name="Display Plinth"
          position={[1.3, 0.32, 1.15]}
          rotation={[0, 0.1, 0]}
          scale={[0.9, 0.65, 0.9]}
          renderMesh
        />
        {selectedId === 'display_plinth' ? (
          <>{/* TODO: render info panel for Display Plinth. */}</>
        ) : null}
        {/* product_02 - Product 02 | role=product | group=display_area | traits=clickable,hoverable,displayable,focusable | behavior=click_select,hover_highlight,show_info,focus_camera */}
        <Product
          sourceId="product_02"
          name="Product 02"
          position={[2.1, 0.55, -0.2]}
          rotation={[0, -0.25, 0]}
          scale={[0.8, 0.7, 0.8]}
          renderMesh
          onHoverStart={() => handleHoverStart('product_02')}
          onHoverEnd={() => handleHoverEnd('product_02')}
          onSelect={() => {
            handleSelect('product_02');
            handleFocusCamera('product_02');
          }}
        />
        {selectedId === 'product_02' ? (
          <>{/* TODO: render info panel for Product information: Interactive showroom item generated from structured scene metadata.. */}</>
        ) : null}
        {/* light_key - Light Key | role=lighting | group=lighting_zone */}
        <SceneLight
          sourceId="light_key"
          name="Light Key"
          position={[-3.2, 3.4, 2.2]}
          rotation={[0, 0.5, 0]}
          scale={[0.25, 0.25, 0.25]}
          lightKind="directional"
          lightIntensity={1.2}
          lightCastShadow
        />
        {/* backdrop_panel - Backdrop Panel | role=environment | group=environment */}
        <EnvironmentGroup
          sourceId="backdrop_panel"
          name="Backdrop Panel"
          position={[-2.4, 1.05, -2.65]}
          rotation={[0, 0.18, 0]}
          scale={[1.6, 2.1, 0.1]}
          renderMesh
        />
      </group>
    </>
  );
}
"
`;

exports[`exportSceneToR3fModule > wraps contiguous semantic group members without reordering children 1`] = `
"/* eslint-disable */
/* Auto-generated by Diorama R3F bridge. Review TODOs before shipping. */
import type { ReactNode } from 'react';
import type { ThreeElements } from '@react-three/fiber';

type SemanticNodeProps = Omit<ThreeElements['group'], 'children'> & {
  sourceId: string;
  semanticRole: string;
  renderMesh?: boolean;
  children?: ReactNode;
  onSelect?: () => void;
  onHoverStart?: () => void;
  onHoverEnd?: () => void;
};

function SemanticNode(props: SemanticNodeProps) {
  const { sourceId, semanticRole, renderMesh, children, onSelect, onHoverStart, onHoverEnd, ...groupProps } = props;
  return (
    <group
      {...groupProps}
      userData={{ sourceId, semanticRole }}
      onPointerOver={onHoverStart}
      onPointerOut={onHoverEnd}
      onClick={onSelect}
    >
      {renderMesh ? (
        <mesh castShadow receiveShadow>
          <boxGeometry args={[1, 1, 1]} />
          <meshStandardMaterial color="#9ca3af" />
        </mesh>
      ) : null}
      {children}
    </group>
  );
}

type SemanticComponentProps = Omit<SemanticNodeProps, 'semanticRole'>;

function DisplaySurface(props: SemanticComponentProps) {
  return <SemanticNode {...props} semanticRole="display" />;
}

function Product(props: SemanticComponentProps) {
  return <SemanticNode {...props} semanticRole="product" />;
}

function DisplayArea({ children }: { children: ReactNode }) {
  return <group name="DisplayArea">{children}</group>;
}

export function DioramaScene() {
  return (
    <>
      {/* Semantic group: display_area | role=display | nodes=display-a,display-b */}
      {/* root - Root */}
      <group name="Root" position={[0, 0, 0]} rotation={[0, 0, 0]} scale={[1, 1, 1]}>
        {/* Semantic group: display_area | role=display | nodes=display-a,display-b */}
        <DisplayArea>
          {/* display-a - Display A | role=display | group=display_area */}
          <DisplaySurface
            sourceId="display-a"
            name="Display A"
            position={[0, 0, 0]}
            rotation={[0, 0, 0]}
            scale={[1, 1, 1]}
            renderMesh
          />
          {/* display-b - Display B | role=display | group=display_area */}
          <DisplaySurface
            sourceId="display-b"
            name="Display B"
            position={[0, 0, 0]}
            rotation={[0, 0, 0]}
            scale={[1, 1, 1]}
            renderMesh
          />
        </DisplayArea>
        {/* product-c - Product C | role=product */}
        <Product
          sourceId="product-c"
          name="Product C"
          position={[0, 0, 0]}
          rotation={[0, 0, 0]}
          scale={[1, 1, 1]}
          renderMesh
        />
      </group>
    </>
  );
}
"
`;
